--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,9 @@ dev = [
     "isort (>=5.13.0,<6.0.0)",
     "safety (>=3.0.0,<4.0.0)",
     "bandit[toml] (>=1.8.0,<2.0.0)",
-    "radon (>=6.0.0,<7.0.0)"
+    "radon (>=6.0.0,<7.0.0)",
+    "pre-commit (>=4.0.0,<5.0.0)",
+    "django-upgrade (>=1.22.0,<2.0.0)"
 ]
 [tool.ruff]
 line-length = 100
