fix(ci): Add gettext installation and fix environment variables

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -7,32 +7,46 @@ on:
 jobs:
   pr-validation:
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Set up Python 3.13
       uses: actions/setup-python@v5
       with:
         python-version: '3.13'
-    
+
     - name: Install Poetry
       uses: snok/install-poetry@v1
-    
+
     - name: Install dependencies
       run: poetry install --no-interaction
-    
+
+    - name: Install gettext
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y gettext
+
     - name: Check for migration conflicts
+      env:
+        SECRET_KEY: test-secret-key-for-ci
+        DEBUG: 'True'
       run: |
         cd src
         poetry run python manage.py makemigrations --check --dry-run --noinput
-    
+
     - name: Validate templates
+      env:
+        SECRET_KEY: test-secret-key-for-ci
+        DEBUG: 'True'
       run: |
         cd src
         poetry run python manage.py validate_templates || echo "Template validation passed"
-    
+
     - name: Check for missing translations
+      env:
+        SECRET_KEY: test-secret-key-for-ci
+        DEBUG: 'True'
       run: |
         cd src
         poetry run python manage.py makemessages --all --no-location --ignore=venv --ignore=env
@@ -40,22 +54,22 @@ jobs:
 
   complexity-check:
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Set up Python 3.13
       uses: actions/setup-python@v5
       with:
         python-version: '3.13'
-    
+
     - name: Install radon
       run: pip install radon
-    
+
     - name: Check cyclomatic complexity
       run: |
         radon cc src/ -a -nb || true
-    
+
     - name: Check maintainability index
       run: |
         radon mi src/ -nb || true
