--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+
     services:
       postgres:
         image: postgres:15
@@ -24,7 +24,7 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-      
+
       redis:
         image: redis:7-alpine
         ports:
@@ -37,41 +37,46 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Set up Python 3.13
       uses: actions/setup-python@v5
       with:
         python-version: '3.13'
-    
+
     - name: Install Poetry
       uses: snok/install-poetry@v1
       with:
         version: latest
         virtualenvs-create: true
         virtualenvs-in-project: true
-    
+
     - name: Load cached venv
       id: cached-poetry-dependencies
       uses: actions/cache@v4
       with:
         path: .venv
         key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
-    
+
     - name: Install dependencies
       if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
       run: poetry install --no-interaction --no-root
-    
+
     - name: Install project
       run: poetry install --no-interaction
-    
+
+    - name: Install gettext
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y gettext
+
     - name: Run linting
       run: |
         poetry run ruff check src/ --output-format=github || true
-    
+
     - name: Run type checking
       run: |
         poetry run mypy src/ --ignore-missing-imports || true
-    
+
     - name: Run migrations
       env:
         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/pyland_test
@@ -81,75 +86,76 @@ jobs:
       run: |
         cd src
         poetry run python manage.py migrate --noinput
-    
+
     - name: Compile translations
       run: |
         cd src
         poetry run python manage.py compilemessages
-    
+
     - name: Run tests
       env:
         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/pyland_test
         REDIS_URL: redis://localhost:6379/0
         SECRET_KEY: test-secret-key-for-ci
         DEBUG: 'True'
+        DJANGO_SETTINGS_MODULE: pyland.settings
       run: |
         cd src
-        poetry run pytest --cov=. --cov-report=xml --cov-report=term-missing -v
-    
+        poetry run pytest --cov=. --cov-report=xml:../coverage.xml --cov-report=term-missing -v
+
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
       with:
-        files: ./src/coverage.xml
+        files: ./coverage.xml
         fail_ci_if_error: false
         token: ${{ secrets.CODECOV_TOKEN }}
 
   security:
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Set up Python 3.13
       uses: actions/setup-python@v5
       with:
         python-version: '3.13'
-    
+
     - name: Install Poetry
       uses: snok/install-poetry@v1
-    
+
     - name: Install dependencies
       run: poetry install --no-interaction
-    
+
     - name: Security check with Safety
       run: |
         poetry run safety check --json || true
-    
+
     - name: Security check with Bandit
       run: |
         poetry run bandit -r src/ -f json -o bandit-report.json || true
 
   code-quality:
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Set up Python 3.13
       uses: actions/setup-python@v5
       with:
         python-version: '3.13'
-    
+
     - name: Install Poetry
       uses: snok/install-poetry@v1
-    
+
     - name: Install dependencies
       run: poetry install --no-interaction
-    
+
     - name: Check code formatting with Black
       run: |
         poetry run black --check src/ || true
-    
+
     - name: Check import sorting with isort
       run: |
         poetry run isort --check-only src/ || true
