--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,8 @@ dependencies = [
     "faker (>=37.12.0,<38.0.0)",
     "django-taggit (>=6.1.0,<7.0.0)",
     "djangorestframework (>=3.16.1,<4.0.0)",
-    "sentry-sdk[django] (>=2.43.0,<3.0.0)"
+    "sentry-sdk[django] (>=2.43.0,<3.0.0)",
+    "psycopg[binary] (>=3.2.0,<4.0.0)"
 ]
 
 [build-system]
