feat: add Docker containerization and health checks for k8s readiness
✨ New Features:
- Multi-stage Dockerfile with production optimization
- docker-compose.yml for local development (web, postgres, redis, celery)
- Health check endpoints: /api/health/ (liveness), /api/readiness/ (with DB+Redis checks)
- Health module with comprehensive dependency checks
- Gunicorn as production WSGI server
- docker-entrypoint.sh for initialization (migrations, roles, collectstatic)

📦 Infrastructure:
- .dockerignore for optimized build context
- .env.example with all required environment variables
- DOCKER.md with quick start guide and common commands
- PRODUCTION_READINESS.md with k8s roadmap and current status (~25% ready)

🔧 Technical Details:
- Builder stage: Poetry + dependencies installation
- Production stage: minimal python:3.13-slim + non-root user
- Services: PostgreSQL 15, Redis 7, Celery worker + beat
- Volumes: postgres_data, redis_data, media_files, static_files
- Healthchecks for all services
- Gunicorn: 4 workers, auto-reload in dev, optimized settings

🚀 Next Steps:
Week 1: K8s manifests (ConfigMap, Secrets, Deployments)
Week 2: CI/CD for Docker build & push to GHCR
Week 3: Observability (Prometheus, Grafana, Loki)
Week 4: Autoscaling & optimization

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ dependencies = [
     "django-taggit (>=6.1.0,<7.0.0)",
     "djangorestframework (>=3.16.1,<4.0.0)",
     "sentry-sdk[django] (>=2.43.0,<3.0.0)",
-    "psycopg[binary] (>=3.2.0,<4.0.0)"
+    "psycopg[binary] (>=3.2.0,<4.0.0)",
+    "gunicorn (>=23.0.0,<24.0.0)"
 ]
 
 [build-system]
