feat: add Docker Hub auto-publish workflow
- Add GitHub Actions workflow for automatic Docker image publishing
- Publish to Docker Hub on every push to main branch
- Support for semantic versioning tags (v1.0.0)
- Multi-platform builds (amd64, arm64)
- Docker layer caching for faster builds
- Auto-update Docker Hub repository description

New files:
- .github/workflows/docker-publish.yml - CI/CD workflow
- DOCKER_HUB_SETUP.md - complete setup documentation
- docker-compose.prod.yml - production compose file
- .env.prod.example - production env template

Changes:
- README.md - add Docker Hub badge and quick start
- docker-compose.yml - add option to use Docker Hub image

Setup required:
1. Create Docker Hub account
2. Add DOCKERHUB_USERNAME secret to GitHub
3. Add DOCKERHUB_TOKEN secret to GitHub
4. Update username in configs

See DOCKER_HUB_SETUP.md for detailed instructions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,9 @@ services:
 
   # Django Web Application
   web:
+    # Используйте либо готовый образ из Docker Hub (закомментируйте build)
+    # image: username/pyland-backend:latest
+    # Либо локальную сборку (закомментируйте image)
     build:
       context: .
       dockerfile: Dockerfile
