fix: include poetry.lock in Docker build context
- Remove poetry.lock from .dockerignore (was blocking Docker builds)
- Add explicit Dockerfile path in docker-publish workflow
- Poetry.lock is required for reproducible builds in production

Fixes: ERROR: '/poetry.lock': not found in buildx

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -49,6 +49,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: ./Dockerfile
           platforms: ${{ env.DOCKER_PLATFORMS }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
