fix: allow README.md in Docker build context
- Add exception for README.md to .dockerignore
- Previous *.md rule blocked all markdown files including README.md
- README.md is required by poetry-core during build

Fixes: failed to compute cache key: /README.md: not found

--- a/.dockerignore
+++ b/.dockerignore
@@ -46,8 +46,9 @@ dump.rdb
 .gitignore
 .gitattributes
 
-# Documentation
+# Documentation (но сохраняем README.md для Docker build)
 *.md
+!README.md
 docs/
 
 # CI/CD
