ci: implement Git Flow (dev → main → prod) with branch protection

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main, develop, dev ]
+    branches: [ dev, main, prod ]
   pull_request:
-    branches: [ main, develop, dev ]
+    branches: [ dev, main, prod ]
 
 jobs:
   test:
