--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,9 +2,11 @@ name: Docker Build and Push
 
 on:
   push:
-    branches: [ main, develop, dev ]
+    branches: [ dev, main, prod ]
     tags:
       - 'v*.*.*'
+  pull_request:
+    branches: [ main, prod ]
   workflow_dispatch:
 
 env:
@@ -37,13 +39,20 @@ jobs:
         with:
           images: ${{ env.DOCKER_IMAGE }}
           tags: |
-            type=ref,event=branch
-            type=ref,event=pr
+            # dev branch → dev tag
+            type=raw,value=dev,enable=${{ github.ref == 'refs/heads/dev' }}
+            type=raw,value=dev-{{sha}},enable=${{ github.ref == 'refs/heads/dev' }}
+            # main branch → latest + main tags
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
+            type=raw,value=main,enable=${{ github.ref == 'refs/heads/main' }}
+            type=raw,value=main-{{sha}},enable=${{ github.ref == 'refs/heads/main' }}
+            # prod branch → production tag
+            type=raw,value=production,enable=${{ github.ref == 'refs/heads/prod' }}
+            type=raw,value=prod-{{sha}},enable=${{ github.ref == 'refs/heads/prod' }}
+            # semver tags from releases
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-            type=sha,prefix={{branch}}-
-            type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
