--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   # PostgreSQL Database
   postgres:
@@ -47,18 +45,7 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: pyland-web
-    command: >
-      sh -c "
-        python manage.py migrate --noinput &&
-        python manage.py create_roles &&
-        python manage.py collectstatic --noinput &&
-        gunicorn pyland.wsgi:application
-          --bind 0.0.0.0:8000
-          --workers 2
-          --reload
-          --access-logfile -
-          --error-logfile -
-      "
+    command: sh -c "python manage.py migrate --noinput && python manage.py create_roles && python manage.py collectstatic --noinput && gunicorn pyland.wsgi:application --bind 0.0.0.0:8000 --workers 2 --reload --access-logfile - --error-logfile -"
     environment:
       DEBUG: ${DEBUG:-True}
       SECRET_KEY: ${SECRET_KEY:-dev-secret-key-change-in-production}
@@ -94,6 +81,8 @@ services:
       SECRET_KEY: ${SECRET_KEY:-dev-secret-key-change-in-production}
       DATABASE_URL: postgresql://${POSTGRES_USER:-pyland_user}:${POSTGRES_PASSWORD:-pyland_password}@postgres:5432/${POSTGRES_DB:-pyland}
       REDIS_URL: redis://redis:6379/0
+      CELERY_BROKER_URL: redis://redis:6379/0
+      CELERY_RESULT_BACKEND: redis://redis:6379/0
     volumes:
       - ./src:/app/src
       - ./logs:/app/logs
@@ -112,12 +101,14 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: pyland-celery-beat
-    command: celery -A pyland beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
+    command: celery -A pyland beat -l info
     environment:
       DEBUG: ${DEBUG:-True}
       SECRET_KEY: ${SECRET_KEY:-dev-secret-key-change-in-production}
       DATABASE_URL: postgresql://${POSTGRES_USER:-pyland_user}:${POSTGRES_PASSWORD:-pyland_password}@postgres:5432/${POSTGRES_DB:-pyland}
       REDIS_URL: redis://redis:6379/0
+      CELERY_BROKER_URL: redis://redis:6379/0
+      CELERY_RESULT_BACKEND: redis://redis:6379/0
     volumes:
       - ./src:/app/src
       - ./logs:/app/logs
