fix(ci): добавлена поддержка dev ветки в workflows
- branch-protection.yml: добавлен триггер для PR в dev
- docs.yml: добавлена проверка markdown для dev и main
- .markdownlint-cli2.yaml: мягкие правила для markdown (MD013, MD033, MD041 отключены)

Теперь PR feature/* → dev будут проходить проверки корректно

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,12 +2,12 @@ name: Documentation
 
 on:
   push:
-    branches: [main]
+    branches: [dev, main]
     paths:
       - '**.md'
       - '.github/workflows/docs.yml'
   pull_request:
-    branches: [main]
+    branches: [dev, main]
     paths:
       - '**.md'
 
