--- a/.github/workflows/branch-protection.yml
+++ b/.github/workflows/branch-protection.yml
@@ -2,7 +2,7 @@ name: Branch Protection Checks
 
 on:
   pull_request:
-    branches: [ main, prod ]
+    branches: [ dev, main, prod ]
     types: [ opened, synchronize, reopened, ready_for_review ]
 
 jobs:
