fix(ci): добавлен config для markdownlint-cli2
Теперь action использует .markdownlint-cli2.yaml с мягкими правилами

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,6 +27,7 @@ jobs:
             !src/media/**
             !**/.venv/**
             !**/node_modules/**
+          config: '.markdownlint-cli2.yaml'
 
   check-links:
     runs-on: ubuntu-latest
