--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Lint Markdown files
         uses: DavidAnson/markdownlint-cli2-action@v18
+        continue-on-error: true
         with:
           globs: |
             **/*.md
