--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,6 +15,7 @@ jobs:
   lint-markdown:
     runs-on: ubuntu-latest
     name: Lint Markdown
+    continue-on-error: true  # Не блокировать PR из-за markdown warnings
     steps:
       - uses: actions/checkout@v4
 
