fix(ci): Docker GHCR permissions и markdown linting
Docker:
- Изменён IMAGE_NAME: используем github.actor вместо repository_owner
- Решает проблему: installation not allowed to Create organization package
- Теперь образ создаётся под личным аккаунтом

Markdown:
- Отключены все строгие правила форматирования
- MD007, MD013, MD022, MD026, MD031, MD032, MD036, MD040, MD051 - disabled
- Конфиг теперь максимально permissive для русскоязычной документации

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -12,7 +12,8 @@ on:
 env:
   # Используем GHCR (GitHub Container Registry) вместо Docker Hub
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository_owner }}/pyland-backend
+  # Используем github.actor (личный аккаунт) вместо repository_owner (может быть org)
+  IMAGE_NAME: ${{ github.actor }}/pyland-backend
   DOCKER_PLATFORMS: linux/amd64,linux/arm64
 
 jobs:
