fix(ci): Добавить packages:write permission для GHCR

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -19,6 +19,9 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write  # Требуется для публикации в GHCR
 
     steps:
       - name: Checkout code
