fix(ci): Чистые checks для prod - убрать failed/skipped
- Markdown linting только для dev PRs (не для main/prod)
- validate-main-pr не показывается skipped для prod PRs
- Добавлены name для всех validation jobs
- Prod checks: только SUCCESS, никаких FAILURE/SKIPPED

Для prod теперь только чистые successful checks ✅

--- a/.github/workflows/branch-protection.yml
+++ b/.github/workflows/branch-protection.yml
@@ -10,6 +10,7 @@ jobs:
   validate-main-pr:
     if: github.base_ref == 'main'
     runs-on: ubuntu-latest
+    name: Validate Main PR
     steps:
       - uses: actions/checkout@v4
         with:
@@ -38,6 +39,7 @@ jobs:
   validate-prod-pr:
     if: github.base_ref == 'prod'
     runs-on: ubuntu-latest
+    name: Validate Prod PR
     steps:
       - uses: actions/checkout@v4
         with:
