--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -7,7 +7,7 @@ on:
       - '**.md'
       - '.github/workflows/docs.yml'
   pull_request:
-    branches: [dev, main]
+    branches: [dev]  # Только для dev - prod требует чистоту
     paths:
       - '**.md'
 
