chore: Pre-K8s cleanup - modernize to GHCR
✅ Removed obsolete files:
- .test-main.txt (temporary test artifact)
- .markdownlint.json (duplicate config)
- DOCKER_HUB_SETUP.md (deprecated Docker Hub guide)

✅ Updated documentation:
- README.md: Docker Hub → GHCR, modern CI badges
- branch-protection.yml: Removed DOCKERHUB_USERNAME secret

✅ Validation completed:
- Docker Compose: All 5 services healthy
- Health endpoints: All passing (/api/health/, /api/readiness/, /api/ping)
- CI/CD: All workflows passing

✅ Added Pre-K8s readiness checklist

Project is production-ready for Kubernetes migration 🚀

--- a/.github/workflows/branch-protection.yml
+++ b/.github/workflows/branch-protection.yml
@@ -60,10 +60,10 @@ jobs:
           # GitHub Actions автоматически проверит статус CI
 
       - name: Verify Docker image exists
-        env:
-          DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/pyland-backend
         run: |
-          echo "✅ Verifying Docker image for commit ${{ github.sha }}"
+          echo "✅ Verifying Docker image build and publish"
+          echo "Image: ghcr.io/${{ github.repository }}"
+          echo "Commit: ${{ github.sha }}"
           # Проверка будет через успешный build в docker-publish workflow
 
   # Полный набор тестов для критичных PR
