--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,12 +2,12 @@ name: Documentation
 
 on:
   push:
-    branches: [main]
+    branches: [dev]  # Только dev - main/prod требуют чистоту
     paths:
       - '**.md'
       - '.github/workflows/docs.yml'
   pull_request:
-    branches: [main]
+    branches: [dev]  # Только для dev - prod требует чистоту
     paths:
       - '**.md'
 
@@ -15,6 +15,7 @@ jobs:
   lint-markdown:
     runs-on: ubuntu-latest
     name: Lint Markdown
+    continue-on-error: true  # Не блокировать PR из-за markdown warnings
     steps:
       - uses: actions/checkout@v4
 
@@ -27,6 +28,7 @@ jobs:
             !src/media/**
             !**/.venv/**
             !**/node_modules/**
+          config: '.markdownlint-cli2.yaml'
 
   check-links:
     runs-on: ubuntu-latest
