feat(prod): Production-ready configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,14 @@ services:
       REDIS_URL: redis://redis:6379/0
       ALLOWED_HOSTS: localhost,127.0.0.1,web
       CSRF_TRUSTED_ORIGINS: http://localhost:8000,http://127.0.0.1:8000
+      # Email configuration
+      EMAIL_BACKEND: ${EMAIL_BACKEND:-django.core.mail.backends.smtp.EmailBackend}
+      EMAIL_HOST: ${EMAIL_HOST:-smtp.gmail.com}
+      EMAIL_HOST_USER: ${EMAIL_HOST_USER:-}
+      EMAIL_HOST_PASSWORD: ${EMAIL_HOST_PASSWORD:-}
+      EMAIL_PORT: ${EMAIL_PORT:-587}
+      EMAIL_USE_TLS: ${EMAIL_USE_TLS:-True}
+      DEFAULT_FROM_EMAIL: ${DEFAULT_FROM_EMAIL:-noreply@example.com}
     ports:
       - "${WEB_PORT:-8000}:8000"
     volumes:
@@ -78,6 +86,13 @@ services:
     command: celery -A pyland worker -l info --concurrency=2
     environment:
       DEBUG: ${DEBUG:-True}
+      EMAIL_BACKEND: ${EMAIL_BACKEND:-django.core.mail.backends.smtp.EmailBackend}
+      EMAIL_HOST: ${EMAIL_HOST:-smtp.gmail.com}
+      EMAIL_HOST_USER: ${EMAIL_HOST_USER:-}
+      EMAIL_HOST_PASSWORD: ${EMAIL_HOST_PASSWORD:-}
+      EMAIL_PORT: ${EMAIL_PORT:-587}
+      EMAIL_USE_TLS: ${EMAIL_USE_TLS:-True}
+      DEFAULT_FROM_EMAIL: ${DEFAULT_FROM_EMAIL:-noreply@example.com}
       SECRET_KEY: ${SECRET_KEY:-dev-secret-key-change-in-production}
       DATABASE_URL: postgresql://${POSTGRES_USER:-pyland_user}:${POSTGRES_PASSWORD:-pyland_password}@postgres:5432/${POSTGRES_DB:-pyland}
       REDIS_URL: redis://redis:6379/0
@@ -104,6 +119,13 @@ services:
     command: celery -A pyland beat -l info
     environment:
       DEBUG: ${DEBUG:-True}
+      EMAIL_BACKEND: ${EMAIL_BACKEND:-django.core.mail.backends.smtp.EmailBackend}
+      EMAIL_HOST: ${EMAIL_HOST:-smtp.gmail.com}
+      EMAIL_HOST_USER: ${EMAIL_HOST_USER:-}
+      EMAIL_HOST_PASSWORD: ${EMAIL_HOST_PASSWORD:-}
+      EMAIL_PORT: ${EMAIL_PORT:-587}
+      EMAIL_USE_TLS: ${EMAIL_USE_TLS:-True}
+      DEFAULT_FROM_EMAIL: ${DEFAULT_FROM_EMAIL:-noreply@example.com}
       SECRET_KEY: ${SECRET_KEY:-dev-secret-key-change-in-production}
       DATABASE_URL: postgresql://${POSTGRES_USER:-pyland_user}:${POSTGRES_PASSWORD:-pyland_password}@postgres:5432/${POSTGRES_DB:-pyland}
       REDIS_URL: redis://redis:6379/0
