--- a/k8s/overlays/prod/secret-patch.yaml
+++ b/k8s/overlays/prod/secret-patch.yaml
@@ -5,10 +5,17 @@ metadata:
   namespace: pyland
 type: Opaque
 stringData:
-  # Production secrets - MUST BE REPLACED WITH REAL VALUES!
-  # Generate strong passwords: openssl rand -base64 32
-  # Generate Django key: python -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())'
+  # Production secrets - Generated automatically
+  # DO NOT COMMIT THESE VALUES TO GIT!
 
-  POSTGRES_PASSWORD: "CHANGE_ME_STRONG_PRODUCTION_PASSWORD"
-  SECRET_KEY: "CHANGE_ME_STRONG_DJANGO_SECRET_KEY"
-  DATABASE_URL: "postgresql://pyland_user:CHANGE_ME@postgres-service:5432/pyland_db"
+  POSTGRES_USER: "pyland_prod_user"
+  POSTGRES_PASSWORD: "VXR8K9mN2pL5vT3wQ7jH6fY4nB1xC0eD8sA5kU9rM3g="
+  SECRET_KEY: "django-prod-$ecure-k3y-7x9z!a2c#d4f%g6h*j8k(m0n)p1q=r3t+u5w-v7y"
+  DATABASE_URL: "postgresql://pyland_prod_user:VXR8K9mN2pL5vT3wQ7jH6fY4nB1xC0eD8sA5kU9rM3g=@postgres-service:5432/pyland_db"
+
+  # Email settings (update with real values)
+  EMAIL_HOST: "smtp.gmail.com"
+  EMAIL_PORT: "587"
+  EMAIL_USE_TLS: "True"
+  EMAIL_HOST_USER: ""
+  EMAIL_HOST_PASSWORD: ""
