--- a/k8s/base/deployment-web.yaml
+++ b/k8s/base/deployment-web.yaml
@@ -38,7 +38,7 @@ spec:
 
         readinessProbe:
           httpGet:
-            path: /api/readiness/
+            path: /api/health/
             port: 8000
           initialDelaySeconds: 10
           periodSeconds: 5
