--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "django-cors-headers==4.7.0",
     "django-debug-toolbar==5.2.0",
     "celery~=5.5.3",
+    "django-celery-beat (>=2.8.0,<3.0.0)",
     "loguru",
     "social_auth_app_django~=5.5.1",
     "redis (>=6.4.0,<7.0.0)",
