--- a/k8s/timeweb-deploy.yaml
+++ b/k8s/timeweb-deploy.yaml
@@ -214,19 +214,20 @@ spec:
             configMapKeyRef:
               name: django-config
               key: CELERY_BROKER_URL
-        # Temporarily disabled for debugging
-        # livenessProbe:
-        #   httpGet:
-        #     path: /api/ping/
-        #     port: 8000
-        #   initialDelaySeconds: 30
-        #   periodSeconds: 10
-        # readinessProbe:
-        #   httpGet:
-        #     path: /api/health/
-        #     port: 8000
-        #   initialDelaySeconds: 10
-        #   periodSeconds: 5
+        livenessProbe:
+          httpGet:
+            path: /api/ping
+            port: 8000
+          initialDelaySeconds: 30
+          periodSeconds: 10
+          timeoutSeconds: 3
+        readinessProbe:
+          httpGet:
+            path: /api/health/
+            port: 8000
+          initialDelaySeconds: 10
+          periodSeconds: 5
+          timeoutSeconds: 3
         resources:
           requests:
             memory: "128Mi"
